<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.hackprague.sportcity.LoginActivity"
  >

  <!-- Login progress -->
  <ProgressBar
    style="?android:attr/progressBarStyleLarge"
    android:id="@+id/login_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone"
    />

  <ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
      android:id="@+id/email_login_form"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <AutoCompleteTextView
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_email"
          android:inputType="textEmailAddress"
          android:maxLines="1"
          android:singleLine="true"
          />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_password"
          android:inputType="textPassword"
          android:imeActionId="@+id/login"
          android:imeActionLabel="@string/action_sign_in_short"
          android:imeOptions="actionUnspecified"
          android:maxLines="1"
          android:singleLine="true"
          />

      </android.support.design.widget.TextInputLayout>

      <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        />

      <Button

        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_auth"/>

    </LinearLayout>
  </ScrollView>
</LinearLayout>
